--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{Admin/components/header}">
@@ -10,36 +9,69 @@
           <!-- general form elements -->
           <div class="box box-primary">
             <div class="box-header with-border">
-              <h3 class="box-title">Quick Example</h3>
+              <h3 class="box-title">User</h3>
             </div>
             <!-- /.box-header -->
             <!-- form start -->
-            <form role="form">
+            
+            <form action="/admin/user/add" method="POST" th:object="${acc}">
               <div class="box-body">
+               
                 <div class="form-group">
-                  <label for="exampleInputEmail1">Email address</label>
-                  <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Enter email">
+                  <label for="exampleInputEmail1">Username</label><br>
+                   <i style="color:red" th:errors="*{id}"></i>
+                  <i style="color:red" th:text="${ktTonTai}"></i>
+                  <div th:if="${edit} == false">
+                       <input th:field="*{id}" type="text" class="form-control" placeholder="Enter Username">
+                  </div>
+                  <div th:if="${edit} == true">
+                       <input th:field="*{id}" type="text" class="form-control" placeholder="Enter Username" readonly>
+                  </div>
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputPassword1">Password</label>
-                  <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+                  <label for="exampleInputPassword1">Password</label><br>
+                  <i style="color:red"th:errors="*{password}"></i>
+                  <input th:field="*{password}" type="text" class="form-control" placeholder="Enter Password">
+                </div>
+               <div class="form-group">
+                  <label for="exampleInputPassword1">FullName</label><br>
+                   <i style="color:red"th:errors="*{fullname}"></i>
+                  <input th:field="*{fullname}" type="text" class="form-control" placeholder="Enter FullName">
                 </div>
                 <div class="form-group">
-                  <label for="exampleInputFile">File input</label>
-                  <input type="file" id="exampleInputFile">
-
-                  <p class="help-block">Example block-level help text here.</p>
+                  <label for="exampleInputPassword1">Phone</label><br>
+                   <i style="color:red"th:errors="*{phone}"></i>
+                   <i style="color:red" th:text="${ktPhone}"></i>
+                  <input th:field="*{phone}" type="text" class="form-control"  placeholder="Enter Phone">
                 </div>
-                <div class="checkbox">
-                  <label>
-                    <input type="checkbox"> Check me out
-                  </label>
+                 <div class="form-group">
+                  <label for="exampleInputPassword1">Email</label><br>
+                  <i style="color:red"th:errors="*{email}"></i>
+                  <i style="color:red" th:text="${ktEmail}"></i>
+                  <input th:field="*{Email}" type="text" class="form-control"  placeholder="Enter Email">
                 </div>
+                 <div >
+                  <label for="exampleInputPassword1">Role</label><br>
+                   <i style="color:red"th:errors="*{admin}"></i><br>
+                  <input th:field="*{admin}" type="radio" name="role" value="false">User&ensp;
+                   <input th:field="*{admin}" type="radio"name="role" value="true">Admin
+                </div> 
               </div>
               <!-- /.box-body -->
-
+                      <i style="color:red" th:text="${tb}"></i>
+                   
               <div class="box-footer">
-                <button type="submit" class="btn btn-primary">Submit</button>
+                <div th:if="${edit} == true">
+                <button class="btn btn-primary" disabled>Add</button>
+                    <button formaction="/admin/user/update" class="btn btn-primary">Update</button>
+                    
+                </div>
+                <div th:unless="${edit} == true">
+                   <button class="btn btn-primary">Add</button>
+                 <button formaction="/admin/user/update" class="btn btn-primary" disabled>Update</button>
+                     
+                </div>
+               
               </div>
             </form>
           </div>
@@ -49,132 +81,60 @@
             </div>
             <!-- /.box-header -->
             <div class="box-body">
-              <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap"><div class="row"><div class="col-sm-6"></div><div class="col-sm-6"></div></div><div class="row"><div class="col-sm-12"><table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+              <div id="example2_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
+              <div class="row"><div class="col-sm-6">
+              </div><div class="col-sm-6">
+              </div></div>
+              <div class="row"><div class="col-sm-12">
+              <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
                 <thead>
-                <tr role="row"><th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">Rendering engine</th><th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Browser: activate to sort column ascending">Browser</th><th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">Platform(s)</th><th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Engine version</th><th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">CSS grade</th></tr>
+                 <tr role="row">
+                 <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">Username</th>
+                
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Platform(s): activate to sort column ascending">FullName</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="Engine version: activate to sort column ascending">Phone</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Email</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Activated</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending">Role</th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending"></th>
+                 <th class="sorting" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-label="CSS grade: activate to sort column ascending"></th>
+                 </tr>
+                
                 </thead>
                 <tbody>
                 
                 
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                
-                <tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Firefox 1.0</td>
-                  <td>Win 98+ / OSX.2+</td>
-                  <td>1.7</td>
-                  <td>A</td>
-                </tr><tr role="row" class="even">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Firefox 1.5</td>
-                  <td>Win 98+ / OSX.2+</td>
-                  <td>1.8</td>
-                  <td>A</td>
-                </tr><tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Firefox 2.0</td>
-                  <td>Win 98+ / OSX.2+</td>
-                  <td>1.8</td>
-                  <td>A</td>
-                </tr><tr role="row" class="even">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Firefox 3.0</td>
-                  <td>Win 2k+ / OSX.3+</td>
-                  <td>1.9</td>
-                  <td>A</td>
-                </tr><tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Camino 1.0</td>
-                  <td>OSX.2+</td>
-                  <td>1.8</td>
-                  <td>A</td>
-                </tr><tr role="row" class="even">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Camino 1.5</td>
-                  <td>OSX.3+</td>
-                  <td>1.8</td>
-                  <td>A</td>
-                </tr><tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Netscape 7.2</td>
-                  <td>Win 95+ / Mac OS 8.6-9.2</td>
-                  <td>1.7</td>
-                  <td>A</td>
-                </tr><tr role="row" class="even">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Netscape Browser 8</td>
-                  <td>Win 98SE+</td>
-                  <td>1.7</td>
-                  <td>A</td>
-                </tr><tr role="row" class="odd">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Netscape Navigator 9</td>
-                  <td>Win 98+ / OSX.2+</td>
-                  <td>1.8</td>
-                  <td>A</td>
-                </tr><tr role="row" class="even">
-                  <td class="sorting_1">Gecko</td>
-                  <td>Mozilla 1.0</td>
-                  <td>Win 95+ / OSX.1+</td>
-                  <td>1</td>
-                  <td>A</td>
-                </tr></tbody>
-                <tfoot>
-                <tr><th rowspan="1" colspan="1">Rendering engine</th><th rowspan="1" colspan="1">Browser</th><th rowspan="1" colspan="1">Platform(s)</th><th rowspan="1" colspan="1">Engine version</th><th rowspan="1" colspan="1">CSS grade</th></tr>
-                </tfoot>
+                <tr th:each="Users:${users}" role="row" class="odd">
+                  <td class="sorting_1">[[${Users.id}]]</td>
+                 
+                  <td class="sorting_1">[[${Users.fullname}]]</td>
+                  <td class="sorting_1">[[${Users.phone}]]</td>
+                  <td class="sorting_1">[[${Users.email}]]</td>
+                  <div th:if="${Users.activated}==true">
+                        <td class="sorting_1"><a href="">Inactive</a></td>
+                       
+                  </div>
+                  <div th:unless="${Users.activated}==true">
+                        <td class="sorting_1"><a href="">Active</a></td>
+                  </div>
+                  
+                   <div th:if="${Users.admin}==true">
+                         <td class="sorting_1">Admin</td>
+                    </div>
+                  <div th:unless="${Users.admin}==true">
+                         <td class="sorting_1">User</td>
+                    </div>
+                  <td class="sorting_1"><a th:href="@{|/admin/user/edit?user=${Users.id}&edit=true|}">Edit</a></td>
+                  <div th:if="${Users.activated}==true">
+                        <td class="sorting_1"><a href="">Ẩn</a></td>
+                       
+                  </div>
+                  <div th:unless="${Users.activated}==true">
+                        <td class="sorting_1"><a href="">Hiện</a></td>
+                  </div>
+                </tr>
+               </tbody>
+               
               </table></div></div><div class="row"><div class="col-sm-5"><div class="dataTables_info" id="example2_info" role="status" aria-live="polite">Showing 1 to 10 of 57 entries</div></div><div class="col-sm-7"><div class="dataTables_paginate paging_simple_numbers" id="example2_paginate"><ul class="pagination"><li class="paginate_button previous disabled" id="example2_previous"><a href="#" aria-controls="example2" data-dt-idx="0" tabindex="0">Previous</a></li><li class="paginate_button active"><a href="#" aria-controls="example2" data-dt-idx="1" tabindex="0">1</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="2" tabindex="0">2</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="3" tabindex="0">3</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="4" tabindex="0">4</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="5" tabindex="0">5</a></li><li class="paginate_button "><a href="#" aria-controls="example2" data-dt-idx="6" tabindex="0">6</a></li><li class="paginate_button next" id="example2_next"><a href="#" aria-controls="example2" data-dt-idx="7" tabindex="0">Next</a></li></ul></div></div></div></div>
             </div>
             <!-- /.box-body -->
