--- a/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/cart.html
@@ -29,11 +29,12 @@
 
 
                          <!--shopping cart area start -->
+                        
                         <div class="shopping_cart_area">
-                            <form action="/updateCart" method="POST"> 
+                           
                                     <div class="row">
                                         <div class="col-12">
-                                            <div class="table_desc">
+                                            <div  class="table_desc">
                                             
                                       
                                             
@@ -52,25 +53,28 @@
                                                 </thead>
                                                 <tbody >
                                                     <tr th:each="HoLy:${item}">
-                                                           <input  type="hidden" id="id" th:value="${HoLy.id}">
+                                                        
                                                        <td class="product_remove"><a th:href="@{|/deleteCart/${HoLy.id}|}"><i class="fa fa-trash-o"></i></a></td>
                                                         <td class="product_thumb"><a href="#"><img  th:src="@{|assets/img/product/${HoLy.imgProductCart}|}"  alt=""></a></td>
                                                         <td class="product_name"><a href="#"> [[${HoLy.nameProductCart}]]</a></td>
-                                                        <td class="product-price">[[${HoLy.priceProductCart}]]</td>
-                                                        <td class="product_quantity"><input id="qty"  min="1" max="100" type="number" th:value="${HoLy.quanlityProductCart}" ></td>
-                                                        <td class="product_total">£130.00</td>
-
-
-                                                    </tr>
+                                                        <td class="product-price">[[${HoLy.priceProductCart}*1]]</td>
+                                                        <form th:action="@{/updateCart}" th:method="post"  > 
+                                                        <td class="product_quantity"><input name="qty"  min="1" max="100" type="number" th:value="${HoLy.quanlityProductCart}" ></td>
+                                                        <td class="product_total">[[${HoLy.priceProductCart * HoLy.quanlityProductCart}*1]]</td>
+    <div class="cart_submit">   
+ <td> <button type="submit" th:formaction="@{|/updateCart?idcart=${HoLy.id}|}">update cart</button> </td>
+ </div>
+                                                      </form>  </tr>
                                               
                                                  
                                                 </tbody>
                                             </table>   
                                                 </div>  
-                                                <div class="cart_submit">
-                                                  <button><a th:href="@{/clearCart}">Clear cart</a></button>
-                                                    <button formaction="/updateCart">update cart<button>
-                                                     <input type="submit" value="Update cart">
+                                                   <div class="cart_submit">                                              
+                                                    <button><a th:href="@{/clearCart}" >Clear cart</a></button>   
+                                                     <a th:href="@{/clearCart}" ><input type="button" onclick="alert('Đã clear')" value="Clear cart"></a>                                          
+                                                  
+                                                </div>   
                                                 </div>   
                                                      
                                              
@@ -96,7 +100,8 @@
                                                     <div class="coupon_inner">
                                                        <div class="cart_subtotal">
                                                            <p>Subtotal</p>
-                                                           <p class="cart_amount">£215.00</p>
+                                                           
+                                                           <p class="cart_amount">[[${tongTien}*1]]</p>
                                                        </div>
                                                        <div class="cart_subtotal ">
                                                            <p>Shipping</p>
@@ -106,10 +111,10 @@
 
                                                        <div class="cart_subtotal">
                                                            <p>Total</p>
-                                                           <p class="cart_amount">£215.00</p>
+                                                           <p class="cart_amount">[[${tongTien}*1]]</p>
                                                        </div>
                                                        <div class="checkout_btn">
-                                                           <a href="#">Proceed to Checkout</a>
+                                                           <a th:href="@{/checkout}">Proceed to Checkout</a>
                                                        </div>
                                                     </div>
                                                 </div>
@@ -117,8 +122,9 @@
                                         </div>
                                     </div>
                                     <!--coupon code area end-->
-                                </form> 
+                            
                          </div>
+                          
                          <!--shopping cart area end -->
 
    
