--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -53,7 +53,7 @@
 											class="table table-bordered table-hover dataTable"
 											role="grid" aria-describedby="example2_info">
 											<thead>
-												<!--<tr role="row">
+												<tr role="row">
 													<th class="sorting_asc" tabindex="0"
 														aria-controls="example2" rowspan="1" colspan="1"
 														aria-sort="ascending"
@@ -64,7 +64,7 @@
 														aria-label="Browser: activate to sort column ascending">Name
 														Category</th>
 														
-												</tr> -->
+												</tr>
 											</thead>
 											<tbody>
 
