--- a/Normal_DATN/src/main/resources/templates/Admin/components/header.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/header.html
@@ -98,7 +98,7 @@
 <script th:src="@{/AdminAssets/dist/customCategory.js}"></script>
 <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap.min.js"></script>
-<script th:src="@{/AdminAssets/dist/js_edit_table/dataTables.editor.min.js}"></script>
+<script src="https://markcell.github.io/jquery-tabledit/assets/js/tabledit.min.js"></script>
 </div>
 </body>
 </html>
