--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -63,6 +63,9 @@
 														rowspan="1" colspan="1"
 														aria-label="Browser: activate to sort column ascending">Name
 														Category</th>
+														<th class="sorting" tabindex="0" aria-controls="example2"
+														rowspan="1" colspan="1"
+														aria-label="Browser: activate to sort column ascending">Action</th>
 														
 												</tr>
 											</thead>
