--- a/Normal_DATN/src/main/resources/templates/layout/layout.html
+++ b/Normal_DATN/src/main/resources/templates/layout/layout.html
@@ -36,10 +36,10 @@
                                         <div class="col-lg-6 col-md-6">
                                            <div class="switcher">
                                                 <ul>
-                                                    <li class="languages"><a href="#"><img src="assets\img\logo\fontlogo.jpg" alt=""> English <i class="fa fa-angle-down"></i></a>
+                                                    <li class="languages"><a href="#"><img th:src="@{/assets/img/logo/fontlogo.jpg}" alt=""> English <i class="fa fa-angle-down"></i></a>
                                                         <ul class="dropdown_languages">
-                                                            <li><a href="#"><img src="assets\img\logo\fontlogo.jpg" alt=""> English</a></li>
-                                                            <li><a href="#"><img src="assets\img\logo\fontlogo2.jpg" alt=""> French </a></li>
+                                                            <li><a href="#"><img th:src="@{/assets/img/logo/fontlogo.jpg}" alt=""> English</a></li>
+                                                            <li><a href="#"><img th:src="@{/assets/img/logo/fontlogo2.jpg}" alt=""> French </a></li>
                                                         </ul>   
                                                     </li> 
 
@@ -106,7 +106,7 @@
                                        <!--logo start-->
                                         <div class="col-lg-3 col-md-3">
                                             <div class="logo">
-                                                <a th:href="@{/index}"><img src="assets\img\logo\logo.jpg.png" alt=""></a>
+                                                <a th:href="@{/index}"><img th:src="@{/assets/img/logo/logo.jpg.png}" alt=""></a>
                                             </div>
                                         </div>
                                         <!--logo end-->
