--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistoryDetail.html
@@ -80,89 +80,5 @@
                          
                          <!--shopping cart area end -->
 
-   
 </body>
-=======
-<!DOCTYPE html>
-<html class="no-js" lang="zxx" xmlns= "http://www.thymeleaf.org" 
-  th:replace="~{/layout/layout::dynamic(~{::title},~{::body})}">
-
-<head>
-<meta charset="UTF-8">
-<title>History</title>
-</head>
-<body>
-  <!--header end -->
-                         <!--breadcrumbs area start-->
-                        <div class="breadcrumbs_area">
-                            <div class="row">
-                                <div class="col-12">
-                                    <div class="breadcrumb_content">
-                                        <ul>
-                                            <li><a href="index.html">home</a></li>
-                                            <li><i class="fa fa-angle-right"></i></li>
-                                            <li>Order History</li>
-                                        </ul>
-
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <!--breadcrumbs area end-->
-
-
-
-                         <!--shopping cart area start -->
-                        <div class="shopping_cart_area">
-                           
-                                    <div class="row">
-                                        <div class="col-12">
-                                            <div class="table_desc">
-                                            
-                                      
-                                            
-                                          
-                                                <div  class="cart_page table-responsive">
-                                                    <table>
-                                                <thead>
-                                                    <tr>
-                                                       
-                                                         
-                                                        <th class="product_thumb">Image</th>
-                                                        <th class="product_name">Name</th>
-                                                        <th class="product-price">Price</th>
-                                                        <th class="product_quanlity">Quanlity</th>
-                                                        <th class="product_total">Total</th>
-                                                    
-                                                    </tr>
-                                                </thead>
-                                                <tbody >
-                                                    <tr th:each="HoLy:${item}">
-                                                         
-                                                       <td class="product_thumb"><a href="#"><img style="width:25%;" th:src="@{|/assets/img/product/${HoLy.image}|}"  alt=""></a></td>
-                                                        <td class="product_name"> [[${HoLy.name}]]</td>
-                                                        <td class="product-price">[[${HoLy.price}*1]]</td>
-                                                        <td class="product_quanlity">[[${HoLy.quanlity}]]</td>
-                                                        <td class="product_total">[[${HoLy.quanlity * HoLy.price}*1]]</td>
-                                                       
-
-                                                    </tr>
-                                              
-                                                 
-                                                </tbody>
-                                            </table>   
-                                                </div>  
-                                               
-                                                     
-                                             
-                                            </div>
-                                         </div>
-                                     </div>
-                       
-                            
-                         </div>
-                         
-                         <!--shopping cart area end -->
-
-   
-</body>
+</html>
