--- a/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistory.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/orderHistory.html
@@ -43,12 +43,15 @@
                                                 <thead>
                                                     <tr>
                                                        
-                                                           <th class="product_thumb">Date</th>
-                                                        <th class="product_name">Telephone</th>
-                                                        <th class="product-name">Address</th>
+                                                           <th class="productthumb">Date</th>
+                                                           <th class="product-name">Phone</th>
+                                                        <th class="product_name">Address</th>
+                                                        
                                                         <th class="product_total">Amount</th>
-                                                        <th class="product_remove">View</th>
-                                                        <th class="product_remove">Cancel Order</th>
+                                                          <th class="product_total">Status</th>
+                                                          <th class="product_remove">Cancel Order</th>
+                                                        <th class="product_total"></th>
+                                                      
                                                        
                                                        
                                                        
@@ -62,8 +65,9 @@
                                                         <td class="product_name"> [[${HoLy.phone}]]</td>
                                                         <td class="product-name">[[${HoLy.address}]]</td>
                                                         <td class="product_total">[[${HoLy.amount}*1]]</td>
-                                                        <td class="product_remove"><a ><i class="fa fa-trash-o"></i></a></td>
-                                                        <td class="product_remove"><a th:href="@{|/orderHistoryDetail/${HoLy.id}|}">See Details</a></td>
+                                                             <td class="product_total">[[${HoLy.status}]]</td>
+                                                        <td class="product_remove"><a th:href="@{|/orderHistory/${HoLy.id}|}"><i class="fa fa-trash-o"></i></a></td>
+                                                        <td class="product_remove"><a th:href="@{|/orderHistoryDetail/${HoLy.id}|}">See</a></td>
                                                     
                                                      
 
