--- a/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/singleProduct.html
@@ -38,37 +38,16 @@
                                             <div class="tab-content produc_tab_c">
                                                 <div class="tab-pane fade show active" id="p_tab1" role="tabpanel">
                                                     <div class="modal_img">
-                                                        <a href="#"><img th:src="@{|assets/img/product/${product.image}|}"alt=""></a>
+                                                        <a href="#"><img th:src="@{|/assets/img/product/${product.image}|}"alt=""></a>
                                                         <div class="img_icone">
-                                                           <img src="assets\img\cart\span-new.png" alt="">
+                                                           <img th:src="@{|/assets/img/product/${product.image}|}" alt="">
                                                        </div>
-                                                        <div class="view_img">
-                                                            <a class="large_view" href="assets\img\product\product13.jpg"><i class="fa fa-search-plus"></i></a>
-                                                        </div>    
+                                             <!--             <div class="view_img">
+                                                            <a class="large_view" src="/assets/img/product/${product.image}" ><i class="fa fa-search-plus"></i></a>
+                                                        </div>    -->
                                                     </div>
                                                 </div>
-                                                <div class="tab-pane fade" id="p_tab2" role="tabpanel">
-                                                    <div class="modal_img">
-                                                        <a href="#"><img th:src="@{|assets/img/product/${product.image}|}"alt=""></a>
-                                                        <div class="img_icone">
-                                                           <img src="assets\img\cart\span-new.png" alt="">
-                                                       </div>
-                                                        <div class="view_img">
-                                                            <a class="large_view" href="assets\img\product\product14.jpg"><i class="fa fa-search-plus"></i></a>
-                                                        </div>     
-                                                    </div>
-                                                </div>
-                                                <div class="tab-pane fade" id="p_tab3" role="tabpanel">
-                                                    <div class="modal_img">
-                                                        <a href="#"><img th:src="@{|assets/img/product/1.jpg}" alt=""></a>
-                                                        <div class="img_icone">
-                                                           <img th:src="@{|assets/img/product/${product.image}|}" alt="">
-                                                       </div>mfp-zoom-out-cur
-                                                        <div class="view_img">
-                                                            <a class="large_view" th:href="@{|assets\img\product\${product.image}|}"> <i class="fa fa-search-plus"></i></a>
-                                                        </div>     
-                                                    </div>
-                                                </div>
+                                  
                                             </div>
 
                                         </div> 
