Ráp j vào bot Sam để win được dự án tốt nghiệp

--- a/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
+++ b/Normal_DATN/src/main/resources/templates/nguoiDung/index.html
@@ -175,7 +175,7 @@
                                                                <img src="assets\img\cart\span-new.png" alt="">
                                                            </div>
                                                            <div class="product_action">
-                                                               <a onclick="alert('Added to cart!')" th:href="@{|/addCart/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
+                                                               <a onclick="alert('Added to cart!')" th:href="@{|/addCartO/${HoLy.id}|}"> <i class="fa fa-shopping-cart"></i> Add to cart</a>
                                                            </div>
                                                       
                                                         </div>
