--- a/Normal_DATN/src/main/resources/templates/Admin/page/user.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/user.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
       layout:decorate="~{Admin/components/header}">
+     
 <body>
 <div layout:fragment ="contentChanges">
 	<section class="content">
@@ -56,17 +57,28 @@
                   <input th:field="*{admin}" type="radio" name="role" value="false">User&ensp;
                    <input th:field="*{admin}" type="radio"name="role" value="true">Admin
                 </div> 
+                
+                 <div >
+                  <label for="exampleInputPassword1">Activated</label><br>
+                   <i style="color:red"th:errors="*{activated}"></i><br>
+                  <input th:field="*{activated}" type="radio" name="activated" value="false">Activate&ensp;
+                   <input th:field="*{activated}" type="radio"name="activated" value="true">Unactivate
+                </div>
               </div>
               <!-- /.box-body -->
                       <i style="color:red" th:text="${tb}"></i>
-                   
+                   <i style="color:red" th:text="${ktItMe}"></i>
               <div class="box-footer">
+              
                 <div th:if="${edit} == true">
+                
+                <button formaction="/admin/user/new?edit=false" class="btn btn-primary" >Reset</button>
                 <button class="btn btn-primary" disabled>Add</button>
                     <button formaction="/admin/user/update" class="btn btn-primary">Update</button>
                     
                 </div>
                 <div th:unless="${edit} == true">
+                    <button formaction="/admin/user/new?edit=false" class="btn btn-primary">Reset</button>
                    <button class="btn btn-primary">Add</button>
                  <button formaction="/admin/user/update" class="btn btn-primary" disabled>Update</button>
                      
@@ -74,10 +86,17 @@
                
               </div>
             </form>
+           
           </div>
   		<div class="box">
             <div class="box-header">
               <h3 class="box-title">Hover Data Table</h3>
+               <h3 style="float:right;" class="box-title">
+               <form>
+                  <input  type="search" >
+                  <button>Search</button>
+               </form>
+              </h3>
             </div>
             <!-- /.box-header -->
             <div class="box-body">
@@ -86,7 +105,8 @@
               </div><div class="col-sm-6">
               </div></div>
               <div class="row"><div class="col-sm-12">
-              <table id="example2" class="table table-bordered table-hover dataTable" role="grid" aria-describedby="example2_info">
+      
+              <table id="example" class="table table-bordered table-hover dataTable" width="100%" data-page-length="25" data-order="[[ 1, &quot;asc&quot; ]]">
                 <thead>
                  <tr role="row">
                  <th class="sorting_asc" tabindex="0" aria-controls="example2" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Rendering engine: activate to sort column descending">Username</th>
@@ -126,12 +146,7 @@
                     </div>
                   <td class="sorting_1"><a th:href="@{|/admin/user/edit?user=${Users.id}&edit=true|}">Edit</a></td>
                    
-                  <div th:if="${Users.activated}==true">
-                        <td class="sorting_1"><a th:href="@{|/admin/user/status?user=${Users.id}&status=false|}">Ẩn</a></td>
-                  </div>
-                  <div th:unless="${Users.activated}==true">
-                        <td class="sorting_1"><a @{|/admin/user/status?user=${Users.id}&status=true|}>Hiện</a></td>
-                  </div>
+                  
                 </tr>
                </tbody>
                
@@ -143,6 +158,6 @@
 		</div>
 	</section>
 </div>
-
+       
 </body>
 </html>
