Viết jquery cần học hết đại học hay 12? con vẹt...con vẹt...con vẹt

--- a/Normal_DATN/src/main/resources/templates/Admin/components/header.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/components/header.html
@@ -39,6 +39,7 @@
 
   <!-- Google Font -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic">
+ <link rel="stylesheet" th:href="@{/css/style.css}">
 </head>
 <body th:fragment ="script_templates" class="skin-blue sidebar-mini wysihtml5-supported" style="height: auto; min-height: 100%;">
 <div class="wrapper" style="height: auto; min-height: 100%;">
@@ -98,9 +99,8 @@
 <script th:src="@{/AdminAssets/dist/customCategory.js}"></script>
 <script src="https://cdn.datatables.net/1.12.1/js/jquery.dataTables.min.js"></script>
 <script src="https://cdn.datatables.net/1.12.1/js/dataTables.bootstrap.min.js"></script>
-<script src="https://markcell.github.io/jquery-tabledit/assets/js/tabledit.min.js"></script>
-
-
+<!-- <script src="https://markcell.github.io/jquery-tabledit/assets/js/tabledit.min.js"></script> -->
+<script src="https://cdn.datatables.net/select/1.5.0/js/dataTables.select.min.js"></script>
 </div>
 </body>
 </html>
