Outcome hôm nay đâu? @Holy @Trung

--- a/Normal_DATN/src/main/resources/templates/Admin/page/category.html
+++ b/Normal_DATN/src/main/resources/templates/Admin/page/category.html
@@ -29,7 +29,7 @@
 							<!-- /.box-body -->
 							<div class="box-footer">
 								<button type="button" class="btn btn-primary"
-									id="submitCategory">Submit</button>
+									id="submitCategoryButton">Submit</button>
 							</div>
 						</form>
 						
